# pearl

./: beatCount.py  main.py  pyproject.toml
static/: styles.css
templates/: about.html  base.html  error.html  home.html  med.html  resources.html  start.html
