[tool.poetry]
name = "pearl"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask-bootstrap = "^3.3.7"
flask = "^1.1.2"
bootstrap4 = "^0.1.0"
pyflakes = "^2.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
