[tool.poetry]
name = "pearl"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask-bootstrap = "^3.3.7"
flask = "^1.1.2"
bootstrap4 = "^0.1.0"
pyflakes = "^2.2.0"
aubio = "^0.4.9"
icons = "^1.1"
librosa = "^0.8.0"
spotipy = "^2.16.1"
json5 = "^0.9.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
